php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #29945 simplexml_load_file URL limitation 255 char?
Submitted: 2004-09-02 05:43 UTC Modified: 2004-09-06 12:20 UTC
From: hinrichs at islco dot com Assigned:
Status: Closed Package: SimpleXML related
PHP Version: 5.0.1 OS: WINNT
Private report: No CVE-ID: None
 [2004-09-02 05:43 UTC] hinrichs at islco dot com
Description:
------------
Putting a long URL into simplexml_load_file:

symptom: Apache does not return any data.  Chopping params off the query to make it < 255 characters long, however, works.

Reproduce code:
---------------
simplexml_load_file('http://aws-beta.amazon.com/onca/xml?Service=AWSProductData&SubscriptionId=1WY05MXT3WM2PXMB12G2&AssociateTag=harappabazaar&ResponseGroup=Medium&Operation=ItemSearch&SearchIndex=Electronics&BrowseNode=281052&ItemPage=1&Sort=price&MaximumPrice=40000&MinimumPrice=30000');

Expected result:
----------------
For it to work same as shorter urls.

Actual result:
--------------
Document contains no data; apache crashes.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-09-06 12:20 UTC] rrichards@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC