Fixed bug #29945 (simplexml_load_file URL limitation 255 char)